# amal

./: .gitignore  60.3.adoc  60.adoc  Cargo.toml  README copy.adoc  README.adoc  amal.js  df.amal.ron  index.html  rustc-ice-2024-11-20T16_25_05-45840.txt
.cargo/: config.toml
.github/workflows/: pages.yml  rust.yml
assets/1/: agilent.ron
input/data/100/: 100.1.ron  100.10.ron  100.2.ron  100.3.ron  100.4.ron  100.5.ron  100.6.ron  100.7.ron  100.8.ron  100.9.ron
input/data/110/: 110.1.ron  110.10.ron  110.2.ron  110.3.ron  110.4.ron  110.5.ron  110.6.ron  110.7.ron  110.8.ron  110.9.ron
input/data/120/: 120.1.ron  120.10.ron  120.2.ron  120.3.ron  120.4.ron  120.5.ron  120.6.ron  120.7.ron  120.8.ron  120.9.ron
input/data/130/: 130.1.ron  130.10.ron  130.2.ron  130.3.ron  130.4.ron  130.5.ron  130.6.ron  130.7.ron  130.8.ron  130.9.ron
input/data/140/: 140.1.ron  140.10.ron  140.2.ron  140.3.ron  140.4.ron  140.5.ron  140.6.ron  140.7.ron  140.8.ron  140.9.ron
input/data/150/: 150.1.ron  150.10.ron  150.2.ron  150.3.ron  150.4.ron  150.5.ron  150.6.ron  150.7.ron  150.8.ron  150.9.ron
input/data/60/: 60.1.ron  60.10.ron  60.2.ron  60.3.ron  60.4.ron  60.5.ron  60.6.ron  60.7.ron  60.8.ron  60.9.ron
input/data/70/: 70.1.ron  70.10.ron  70.2.ron  (+7 more)
input/source/: 1.adoc  100.adoc  110.adoc  120.adoc  130.adoc  140.adoc  150.adoc  60.1.adoc  60.2.adoc  60.adoc  60.all.adoc  70-1.amal.ron  70.1.adoc  70.adoc  80.adoc  90.adoc  temp.adoc
input/temp/: 60-1.amal.ron  60-2.amal.ron
src/: const.rs  lib copy.rs  lib.rs  main.rs
src/app/: data.rs  mod.rs  text.rs
src/presets/: mod.rs
src/special/: data_frame.rs  fa_column.rs  mod.rs  polars.rs
src/utils/: egui_tiles.rs  mod.rs  polars.rs
(+120 files in other folders)
