[package]
edition = "2021"
name = "amal"
rust-version = "1.76"
version = "0.1.6"

[dependencies]
anyhow = "1.0.94"
bincode = "1.3.3"
eframe = { version = "0.29.1", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29.1"
egui-phosphor = "0.7.3"
egui_ext = { git = "https://github.com/kgv/egui_ext" }
egui_extras = "0.29.1"
egui_plot = "0.29.0"
egui_table = "0.1.0"
egui_tiles = "0.10.1"
itertools = "0.13.0"
# https://github.com/pola-rs/polars/issues/17192
molecule = { git = "https://github.com/ippras/molecule" }
polars = { version = "0.44.2", features = [
    "abs",
    "cross_join",
    "diagonal_concat",
    "dtype-i16",
    "dtype-i8",
    "dtype-struct",
    "dtype-u16",
    "dtype-u8",
    # "fmt_no_tty",
    "iejoin",
    "is_between",
    "lazy",
    "list_eval",
    "round_series",
    "serde",
    # "interpolate",
    # "interpolate_by",
], default-features = false }
ron = "0.8.1"
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.41"
uom = { version = "0.36.0", features = ["serde"] }
walkdir = "2.5.0"

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.45"
web-sys = "0.3.72"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2
